using cookbook model

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://g8way.io/mYIoULR7yGYs_6DT1_l0kV1DvYTxyfIm0YgWFZyr6l0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Svelte</title>
+  <title>Cookbook Sidekick</title>
+  <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.6.0/styles/github-dark.min.css">
+  <script src="https://arweave.net/_d-GsX52lw7Sdg8hgKKWf_lLohaQ8f4zIYmXxHWMgQc"></script>
 </head>
 
 <body>
